sandbox/output
MedicineClash.java:2: error: <identifier> expected
    public static Set<Customer> of(Set<Customer>) {
                                                ^
1 error
